--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,20 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gluten:wght@700&family=Quicksand:wght@600&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Quicksand', sans-serif;
+}
+
+:root {
+    --primary-color: rgb(26, 55, 77);
+    --secondary-color: rgb(64, 104, 130);
+    --third-color: rgb(105, 152, 171);
+}
+
 body {
-    width: 100%;
     height: auto;
-    background-image: linear-gradient(rgb(25, 25, 215), white);
+    width: 100%;
+    background-image: linear-gradient(var(--primary-color), white, var(--third-color));
     position: relative;
 }
 
-.bg-header {
-    background-color: rgb(21, 21, 180);
-    color: black;
+.navbar-brand {
+    font-family: 'Gluten', cursive;
 }
 
+.bg-primary-color {
+    background-color: var(--primary-color);
+}
 
+.bg-secondary-color {
+    background-color: var(--secondary-color);
+}
+
+.bg-third-color {
+    background-color: var(--third-color);
+}
 
 #dropdownGenre>.dropdown-item:hover {
     cursor: pointer;
-    background-color: rgb(21, 21, 180);
+    background-color: var(--primary-color);
     color: white;
 }
 
@@ -39,7 +64,7 @@ body {
 
 .not-allowed {
     cursor: not-allowed;
-    color: grey;
+    opacity: 0.3;
 }
 
 .current {
@@ -52,4 +77,44 @@ body {
 
 .details {
     cursor: pointer;
+}
+
+.detail-class {
+    width: 100%;
+    height: auto;
+    padding: 16px 168px;
+}
+
+.font-size-cast {
+    font-size: 16px;
+}
+
+.card-footer, footer {
+    background-color: var(--secondary-color);
+}
+
+@media only screen and (max-width: 1094px) {
+    .detail-class {
+        padding: 32px;
+    }
+
+    .col-4,
+    .col-8 {
+        width: 50%;
+        position: relative;
+    }
+}
+
+@media only screen and (max-width: 913px) {
+
+    .col-4,
+    .col-8 {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    .card-footer {
+        font-size: 12px;
+    }
 }
